--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,16 +1,24 @@
 anyio==3.6.1
 asgiref==3.5.2
+bcrypt==4.0.1
 click==8.1.3
 colorama==0.4.5
 dnspython==2.2.1
+ecdsa==0.18.0
 email-validator==1.2.1
 fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+passlib==1.7.4
 psycopg2-binary==2.9.5
+pyasn1==0.4.8
 pydantic==1.9.1
 python-dotenv==0.20.0
+python-jose==3.3.0
+python-multipart==0.0.5
+rsa==4.9
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.3.0
 starlette==0.19.1
