test conectivity in windows

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   app:
     container_name: app
     build: .
-    command: bash -c "uvicorn main:app --host 127.0.0.1 --port 8000 --reload"
+    command: bash -c "uvicorn main:app  --port 8000 --reload"
 
     volumes:
       - .:/app
