--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -3,42 +3,36 @@ version: "3.8"
 services:
 
   db:
-    container_name: db
-    hostname:  db
     image: postgres
     restart: always
     ports:
-      - 5432:5432
+      - "5432:5432"
     environment:
+      - DATABASE_HOST=127.0.0.1
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin
-    restart: always
-    ports:
-      - 5050:80
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
-    volumes:
-      - ./pgadmin_data:/var/lib/pgadmin
-
-
-
-  app:
-    container_name: app
-    build: .
-    command: bash -c "uvicorn main:app  --port 8000 --reload"
-
-    volumes:
-      - .:/app
     ports:
-      - 8000:8000
+      - "5050:80"
     depends_on:
       - db
+
+  app:
+    build: .
+    ports:
+      - 8000:8000
     restart: always
+    volumes:
+      - .:/app
+    command: bash -c "uvicorn main:app  --port 8000 --reload"
+    depends_on:
+      - db
 
 
 
